--- a/templates/quizz/quizz.html.twig
+++ b/templates/quizz/quizz.html.twig
@@ -10,7 +10,9 @@
                         <img class="image-fluid w-100" src="{{ asset('images/robot1.png')}}" alt="">
                     </div>
                 <form action="">
+                    {{ form_start (form) }}
                     <div class="p-3 text-center text-white">
+
                         <h1 >
                             Question 1
                         </h1>
@@ -20,65 +22,39 @@
                             Ut enim ad minim veniam.
                         </p>
                     </div>
-                    <div class=" row text-center justify-content-center text-white">
+                    <div class=" row text-center justify-content-center text-white check-radio">
 
-                        <div class="col-md-5 button w-50 bg-danger mr-2 mb-2 pt-2 shadow ">
-                            <input type="checkbox"> <p>Réponse 1</p> </input>
+                        <div class="col-md-5 button w-50 bg-danger mr-2 mb-2 pt-2 shadow checkbox-radio">
+                            {{ form_widget (form.choice1) }}
                         </div>
 
-                        <div class="col-md-5 button bg-danger mr-2  mb-2 pt-2 shadow ">
-                            <input type="checkbox"> <p>Réponse 2</p> </input>
+                        <div class="col-md-5 button bg-danger mr-2  mb-2 pt-2 shadow" >
+                            {{ form_widget (form.choice2) }}
                         </div>
                         <div class="col-md-5 button w-50 bg-danger mr-2 mb-2 pt-2 shadow ">
-                            <input type="checkbox"> <p>Réponse 3</p> </input>
+                            {{ form_widget (form.choice3) }}
                         </div>
-                        <div class="col-md-5 button w-50 bg-danger mr-2 mb-2 pt-2 shadow  ">
-                            <input type="checkbox"> <p>Réponse 4</p> </input>
+                        <div class="col-md-5 button w-50 bg-danger mr-2 mb-2 pt-2 shadow ">
+                            {{ form_widget (form.choice4) }}
                         </div>
                     </div>
                     <div class="text-center my-5">
                         <button type="submit" class="btn btn-success shadow rounded-pill">Poursuivre > </button>
                     </div>
+                    {{ form_end (form)}}
                 </form>
             </div>
 
-            <div class="col-6">
+            <div class="col-6 p-3">
                 <div class="example-wrapper">
-
-
                     <!-- clouds -->
 {#                    <div class="container">#}
                         <!-- stars -->
-                        <div class="star star-1"></div>
-                        <div class="star star-2"></div>
-                        <div class="star star-3"></div>
+{#                        <div class="star star-1"></div>#}
+{#                        <div class="star star-2"></div>#}
+{#                        <div class="star star-3"></div>#}
                         <!-- clouds -->
-                        <div class="">
-                            <div class="cloud-group-1">
-                                <div class="cloud cloud-1"></div>
-                                <div class="cloud cloud-2"></div>
-                                <div class="cloud cloud-3"></div>
-                                <div class="cloud cloud-4"></div>
-                                <div class="cloud cloud-5"></div>
-                                <div class="cloud cloud-6"></div>
-                            </div>
-                            <div class="cloud-group-2">
-                                <div class="cloud cloud-1"></div>
-                                <div class="cloud cloud-2"></div>
-                                <div class="cloud cloud-3"></div>
-                                <div class="cloud cloud-4"></div>
-                                <div class="cloud cloud-5"></div>
-                                <div class="cloud cloud-6"></div>
-                            </div>
-                            <div class="cloud-group-3">
-                                <div class="cloud cloud-1"></div>
-                                <div class="cloud cloud-2"></div>
-                                <div class="cloud cloud-3"></div>
-                                <div class="cloud cloud-4"></div>
-                                <div class="cloud cloud-5"></div>
-                                <div class="cloud cloud-6"></div>
-                            </div>
-                        </div>
+
                         <!-- orbits -->
                         <div class="orbit orbit-1"><img class="avatar" src="{{ asset('build/cs1048486361028912.png') }}" alt="avatar1"></div>
                         <div class="orbit orbit-2"><img class="avatar" src="{{ asset('build/cs10188651804540743.png') }}" alt="avatar1"></div>
@@ -95,11 +71,7 @@
                         <!-- sub planet -->
 {#                        <div class="sub-planet"></div>#}
 {#                    </div>#}
-
-
                 </div>
-
-
             </div>
             </div>
 
