--- a/templates/test/index.html.twig
+++ b/templates/test/index.html.twig
@@ -40,12 +40,9 @@
                 <div class="cloud cloud-6"></div>
             </div>
             <!-- orbits -->
-            <div class="orbit orbit-1"><img class="avatar" src="{{ asset('build/cs1048486361028912.png') }}" alt="avatar1"></div>
-            <div class="orbit orbit-2"><img class="avatar" src="{{ asset('build/cs10188651804540743.png') }}" alt="avatar1"></div>
-            <div class="orbit orbit-3"><img class="avatar" src="{{ asset('build/cs11010345522393046.png') }}" alt="avatar1"></div>
-            <div class="orbit orbit-4"><img class="avatar" src="{{ asset('build/cs100630750052269087.png') }}" alt="avatar1"></div>
-            <div class="orbit orbit-5"><img class="avatar" src="{{ asset('build/cs103822919467497853.png') }}" alt="avatar1"></div>
-            <div class="orbit orbit-6"><img class="avatar" src="{{ asset('build/cs1008511162926380344.png') }}" alt="avatar1"></div>
+            {% for i in 0..60 %}
+            <div class="orbit orbit-{{ i }}"><img class="avatar" src="{{ asset('build/images/avatars/cs1048486361028912.png') }}" alt="avatar1"></div>
+            {% endfor %}
             <!-- main planet -->
             <div class="ring-before"></div>
             <div class="ring-bigger-before"></div>
