--- a/assets/styles/quizzquestions.css
+++ b/assets/styles/quizzquestions.css
@@ -1,11 +1,55 @@
-.fiverbg{
-    height: 100%;
-    background: radial-gradient(67.78% 134.03% at 70.21% 35.25%, #CF567A 0%, #E7B7C6 100%);
-}
+/*.fiverbg{*/
+/*    height: 100%;*/
+/*    background: radial-gradient(67.78% 134.03% at 70.21% 35.25%, #CF567A 0%, #E7B7C6 100%);*/
+/*}*/
 .gradient-color {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
+}
+.question{
+    display: block;
+    height: 100vh;
+}
+html{
+    scroll-behavior: smooth;
+}
+.response{
+    display: block;
+    text-decoration: none;
+    color: white;
+    background-color: #dc3545;
+}
+.response:hover{
+    display: block;
+    text-decoration: none;
+    color: white;
+    background-color: #A12A35;
+}
+.print-result{
+    border-radius: 30px;
+    width: 90%;
+    height: 500px;
+    display: block;
+    text-decoration: none;
+    color: #dc3545;
+    background-color: #ffffff;
+}
+.rquestionsA{
+    border-radius: 15px;
+    width: 50px;
+    height: 30px;
+    display: block;
+    color: #dc3545;
+    background-color: #E7C1C1;
+}
+.rquestionsB{
+    border-radius: 15px;
+    width: 50px;
+    height: 20px;
+    display: block;
+    color: #dc3545;
+    background-color: #c1e7dc;
 }
 
 @keyframes gradient {
@@ -18,12 +62,4 @@
     100% {
         background-position: 0% 50%;
     }
-}
-
-.none{
-    display:none;
-}
-.active{
-    width: 100%;
-    height: 100%;
 }
