--- a/templates/quizz/quizz.html.twig
+++ b/templates/quizz/quizz.html.twig
@@ -141,7 +141,7 @@
                             <div class="w-100 h-100 form-check-input ">
 {#                                {{ form_widget (form.choice4) }}#}
                             </div>
-                        </div>input
+                        </div>
                     </div>
                 </div>
                 <!-- Q4 -->
