finished front pages + informations pages

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -7,5 +7,7 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import '~@fortawesome/fontawesome-free/scss/brands';
 @import "quizzquestions.css";
 @import 'test';
+@import 'homepage';
+@import "informations";
 
 
