--- a/templates/quizz/information.html.twig
+++ b/templates/quizz/information.html.twig
@@ -3,5 +3,91 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-    <h1>test information</h1>
+    <div class="container-fluid w-100 h-100 vh-100 gradient-color ">
+        <div class="row m-5 align-content-center ">
+            <div class="col-6 justify-content-center ">
+                <div class="mt-5 d-flex flex-column justify-content-center align-items-center">
+                    <img class="robot-information" src="{{ asset('build/images/robot-pak-1.png') }}">
+                    <h1 class="text-white">Introduction</h1>
+                    <p class="text-box text-center text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Alias aut consequatur
+                        deleniti impedit ipsa iure mollitia natus quibusdam. Accusamus animi commodi ea eius facere magnam
+                            minus mollitia quos voluptas voluptatibus.</p>
+                    <a class="button-presentation p-3 text-center text-white mt-3" href="{{ path('quizz') }}">Start
+                        <i class="fas fa-arrow-right ml-3"></i>
+                    </a>
+                </div>
+
+            </div>
+            <div class="col-6 pt-3">
+                <div class="example-wrapper sticky-top ">
+                    <!-- clouds -->
+                    <div class="container-planet">
+                        <!-- stars -->
+                        <div class="star star-1"></div>
+                        <div class="star star-2"></div>
+                        <div class="star star-3"></div>
+                        <!-- clouds -->
+                        <div class="">
+                            <div class="cloud-group-1">
+                                <div class="cloud cloud-1"></div>
+                                <div class="cloud cloud-2"></div>
+                                <div class="cloud cloud-3"></div>
+                                <div class="cloud cloud-4"></div>
+                                <div class="cloud cloud-5"></div>
+                                <div class="cloud cloud-6"></div>
+                            </div>
+                            <div class="cloud-group-2">
+                                <div class="cloud cloud-1"></div>
+                                <div class="cloud cloud-2"></div>
+                                <div class="cloud cloud-3"></div>
+                                <div class="cloud cloud-4"></div>
+                                <div class="cloud cloud-5"></div>
+                                <div class="cloud cloud-6"></div>
+                            </div>
+                            <div class="cloud-group-3">
+                                <div class="cloud cloud-1"></div>
+                                <div class="cloud cloud-2"></div>
+                                <div class="cloud cloud-3"></div>
+                                <div class="cloud cloud-4"></div>
+                                <div class="cloud cloud-5"></div>
+                                <div class="cloud cloud-6"></div>
+                            </div>
+                        </div>
+                        <!-- 1st orbit -->
+                        <div class="orbit orbit1-1"><img class="avatar" src="{{ asset('build/images/avatars/cs1048486361028912.png') }}" alt="avatar1"></div>
+                        <div class="orbit orbit1-2"><img class="avatar" src="{{ asset('build/images/avatars/cs10188651804540743.png') }}" alt="avatar1"></div>
+                        <div class="orbit orbit1-3"><img class="avatar" src="{{ asset('build/images/avatars/cs11010345522393046.png') }}" alt="avatar1"></div>
+                        <div class="orbit orbit1-4"><img class="avatar" src="{{ asset('build/images/avatars/cs100630750052269087.png') }}" alt="avatar1"></div>
+                        <div class="orbit orbit1-5"><img class="avatar" src="{{ asset('build/images/avatars/cs103822919467497853.png') }}" alt="avatar1"></div>
+                        <div class="orbit orbit1-6"><img class="avatar" src="{{ asset('build/images/avatars/cs1008511162926380344.png') }}" alt="avatar1"></div>
+
+                        <!-- 2nd orbit -->
+                        <div class="orbit orbit2-1"><img class="avatar" src="{{ asset('build/images/avatars/cs1048486361028912.png') }}" alt="avatar1"></div>
+                        <div class="orbit orbit2-2"><img class="avatar" src="{{ asset('build/images/avatars/cs10188651804540743.png') }}" alt="avatar1"></div>
+                        <div class="orbit orbit2-3"><img class="avatar" src="{{ asset('build/images/avatars/cs11010345522393046.png') }}" alt="avatar1"></div>
+                        <div class="orbit orbit2-4"><img class="avatar" src="{{ asset('build/images/avatars/cs100630750052269087.png') }}" alt="avatar1"></div>
+                        <div class="orbit orbit2-5"><img class="avatar" src="{{ asset('build/images/avatars/cs103822919467497853.png') }}" alt="avatar1"></div>
+                        <div class="orbit orbit2-6"><img class="avatar" src="{{ asset('build/images/avatars/cs1008511162926380344.png') }}" alt="avatar1"></div>
+
+                        <!-- 3nd orbit -->
+                        <div class="orbit orbit3-1"><img class="avatar" src="{{ asset('build/images/avatars/cs1048486361028912.png') }}" alt="avatar1"></div>
+                        <div class="orbit orbit3-2"><img class="avatar" src="{{ asset('build/images/avatars/cs10188651804540743.png') }}" alt="avatar1"></div>
+                        <div class="orbit orbit3-3"><img class="avatar" src="{{ asset('build/images/avatars/cs11010345522393046.png') }}" alt="avatar1"></div>
+                        <div class="orbit orbit3-4"><img class="avatar" src="{{ asset('build/images/avatars/cs100630750052269087.png') }}" alt="avatar1"></div>
+                        <div class="orbit orbit3-5"><img class="avatar" src="{{ asset('build/images/avatars/cs103822919467497853.png') }}" alt="avatar1"></div>
+                        <div class="orbit orbit3-6"><img class="avatar" src="{{ asset('build/images/avatars/cs1008511162926380344.png') }}" alt="avatar1"></div>
+
+                        <!-- main planet -->
+                        <div class="ring-before"></div>
+                        <div class="ring-bigger-before"></div>
+                        <div class="planet"><img class="logo-planet" src="{{ asset('build/images/Fiverr_Symbol_Green_RGB.png') }}" alt="planet"></div>
+                        <div class="ring-after"></div>
+                        <div class="ring-bigger-after"></div>
+
+                    </div>
+
+                </div>
+        </div>
+    </div>
 {% endblock %}
