--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,10 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Welcome to Fiverr !{% endblock %}
 
 {% block body %}
-    <div class="bg-danger container">
-        <h1>GO LES HIGH FIVE</h1>
-        <h2>ON EST CHAUD</h2>
+    <div class="container-fluid w-100 h-100 vh-100 gradient-color ">
+        <div class="d-flex flex-column justify-content-center align-items-center">
+            <img class="w-50 pt-5 pb-2 mt-5" src="{{ asset('build/images/Fiverr_Logo_White.svg') }}">
+            <img  class="robot-homepage" src="{{ asset('build/images/robot-fr-1.png') }}">
+            <a class="button-home p-3 text-white mt-3" href="{{ path('quizz_information') }}">Start the Experience and
+                Find Your Mentor</a>
+        </div>
+
     </div>
+
 {% endblock %}
