--- a/templates/quizz/quizz.html.twig
+++ b/templates/quizz/quizz.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Quizz Fiverr{% endblock %}
 
 {% block body %}
     <div class="container-fluid w-100 h-100 gradient-color">
@@ -20,27 +20,27 @@
                     </div>
                     <div class="row text-center justify-content-center text-white check-radio">
 
-                        <a href="#Question2" class="col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response">
+                        <a href="#Question2" class="answers col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response">
                             <h3>{{ choices.0.choice1 }}</h3>
                                 <div class="w-100 h-100 form-check-input ">
                                 </div>
                         </a>
 
 
-                        <a href="#Question2" class=" col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response">
+                        <a href="#Question2" class="answers col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response">
                             <h3>{{ choices.0.choice2 }}</h3>
                             <div class="w-100 h-100 form-check-input ">
                             </div>
                         </a>
 
 
-                        <a href="#Question2" class=" col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response">
+                        <a href="#Question2" class="answers col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response">
                             <h3>{{ choices.0.choice3 }}</h3>
                             <div class="w-100 h-100 form-check-input checkbox-label ">
                             </div>
                         </a>
 
-                        <a href="#Question2"  class="col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response">
+                        <a href="#Question2"  class="answers col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response">
                             <h3>{{ choices.0.choice4 }}</h3>
                             <div class="w-100 h-100 form-check-input ">
                             </div>
