--- a/templates/quizz/quizz.html.twig
+++ b/templates/quizz/quizz.html.twig
@@ -20,27 +20,33 @@
                     </div>
                     <div class="row text-center justify-content-center text-white check-radio">
 
-                        <a href="#Question2" class="answers col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response">
+
+                        <a href="#Question2" data-choice="{{ choices.0.choice1 }}" data-path="{{ path('quizz_choice', {id: 1 })}}" class="col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response answers">
+
                             <h3>{{ choices.0.choice1 }}</h3>
                                 <div class="w-100 h-100 form-check-input ">
                                 </div>
                         </a>
 
 
-                        <a href="#Question2" class="answers col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response">
+
+                        <a href="#Question2" class=" col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response answers">
+
                             <h3>{{ choices.0.choice2 }}</h3>
                             <div class="w-100 h-100 form-check-input ">
                             </div>
                         </a>
 
 
-                        <a href="#Question2" class="answers col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response">
+                        <a href="#Question2" class=" col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response answers">
+
                             <h3>{{ choices.0.choice3 }}</h3>
                             <div class="w-100 h-100 form-check-input checkbox-label ">
                             </div>
                         </a>
 
-                        <a href="#Question2"  class="answers col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response">
+
+                        <a href="#Question2"  class="col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response answers">
                             <h3>{{ choices.0.choice4 }}</h3>
                             <div class="w-100 h-100 form-check-input ">
                             </div>
