add robots + fiverr font

--- a/templates/quizz/quizz.html.twig
+++ b/templates/quizz/quizz.html.twig
@@ -7,10 +7,8 @@
         <div class="row m-5 align-content-center ">
             <div class="col-6 justify-content-center ">
                 <div class="question" >
-                    <div>
-                        <img class="image-fluid w-100" src="{{ asset('images/robot1.png')}}" alt="">
-                    </div>
                     <div class="p-3 text-center text-white ">
+                        <img class="image-fluid" src="{{ asset('build/images/robot-pak-1.png')}}" alt="" width="300px">
                         <h1>
                             Question 1
                         </h1>
@@ -52,10 +50,8 @@
                 <!-- Q2 -->
                 <a id="Question2"></a>
                 <div class="question" >
-                    <div>
-                        <img class="image-fluid w-100" src="{{ asset('images/robot1.png')}}" alt="">
-                    </div>
                     <div class="p-3 text-center text-white">
+                        <img class="image-fluid" src="{{ asset('build/images/robot-en-1.png')}}" alt="" width="300px">
                         <h1>
                             Question 2
                         </h1>
@@ -96,10 +92,8 @@
                 <!-- Q3 -->
                 <a id="Question3"></a>
                 <div class="question" >
-                    <div>
-                        <img class="image-fluid w-100" src="{{ asset('images/robot1.png')}}" alt="">
-                    </div>
                     <div class="p-3 text-center text-white">
+                        <img class="image-fluid" src="{{ asset('build/images/robot-fr-1.png')}}" alt="" width="300px">
                         <h1>
                             Question 3
                         </h1>
@@ -140,10 +134,8 @@
                 <!-- Q4 -->
                 <a id="Question4"></a>
                 <div class="question" >
-                    <div>
-                        <img class="image-fluid w-100" src="{{ asset('images/robot1.png')}}" alt="">
-                    </div>
                     <div class="p-3 text-center text-white">
+                        <img class="image-fluid" src="{{ asset('build/images/robot-pak-3.png')}}" alt="" width="300px">
                         <h1>
                             Question 4
                         </h1>
@@ -184,10 +176,8 @@
                 <!--  Q5 -->
                 <a id="Question5"></a>
                 <div class="question" >
-                    <div>
-                        <img class="image-fluid w-100" src="{{ asset('images/robot1.png')}}" alt="">
-                    </div>
                     <div class="p-3 text-center text-white">
+                        <img class="image-fluid" src="{{ asset('build/images/robot-en-4.png')}}" alt="" width="300px">
                         <h1>
                             Question 5
                         </h1>
@@ -229,10 +219,8 @@
                 <!-- Q6 -->
                 <a id="Question6"></a>
                 <div class="question">
-                    <div>
-                        <img class="image-fluid w-100" src="{{ asset('images/robot1.png')}}" alt="">
-                    </div>
                     <div class="p-3 text-center text-white">
+                        <img class="image-fluid" src="{{ asset('build/images/robot-fr-2.png')}}" alt="" width="300px">
                         <h1>
                             Question 6
                         </h1>
@@ -259,10 +247,8 @@
                 <!-- Q7 -->
                 <a id="Question7"></a>
                 <div class="question" >
-                    <div>
-                        <img class="image-fluid w-100" src="{{ asset('images/robot1.png')}}" alt="">
-                    </div>
                     <div class="p-3 text-center text-white">
+                        <img class="image-fluid" src="{{ asset('build/images/robot-pak-4.png')}}" alt="" width="300px">
                         <h1>
                             Question 7
                         </h1>
@@ -290,10 +276,8 @@
                 <!-- Q8 -->
                 <a id="Question8"></a>
                 <div class="question" >
-                    <div>
-                        <img class="image-fluid w-100" src="{{ asset('images/robot1.png')}}" alt="">
-                    </div>
                     <div class="p-3 text-center text-white">
+                        <img class="image-fluid" src="{{ asset('build/images/robot-en-3.png')}}" alt="" width="300px">
                         <h1>
                             Question 8
                         </h1>
@@ -321,16 +305,14 @@
                 <!-- Q9 -->
                 <a id="Question9"></a>
                 <div class="question" >
-                    <div>
-                        <img class="image-fluid w-100" src="{{ asset('images/robot1.png')}}" alt="">
-                    </div>
                     <div class="p-3 text-center text-white">
+                        <img class="image-fluid" src="{{ asset('build/images/robot-fr-4.png')}}" alt="" width="300px">
                         <h1>
                             Question 9
                         </h1>
                         <p class="text-break px-5 ">
                             {{ questions.8.content }}
-                            <img src="https://static.independent.co.uk/s3fs-public/thumbnails/image/2016/02/14/12/duck-rabbit.png" class="img-fluid mt-2">
+                            <img src="https://static.independent.co.uk/s3fs-public/thumbnails/image/2016/02/14/12/duck-rabbit.png" class="img-fluid mt-2 ml-2" width="300px">
                         </p>
                     </div>
                     <div class=" row text-center justify-content-center text-white check-radio">
@@ -352,11 +334,9 @@
                 </div>
                 <!-- Q10 -->
                 <a id="Question10"></a>
-                <div class="question" >
-                    <div>
-                        <img class="image-fluid w-100" src="{{ asset('images/robot1.png')}}" alt="">
-                    </div>
+                <div class="question">
                     <div class="p-3 text-center text-white">
+                        <img class="image-fluid" src="{{ asset('build/images/robot-pak-1.png')}}" alt="" width="300px">
                         <h1>
                             Question 10
                         </h1>
