--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -10,5 +10,14 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import 'homepage';
 @import "informations";
 
+@font-face {
+  font-family: DomaineDisplay;
+  src: url('/assets/styles/fonts/DomaineDisplay-Medium.otf') format('opentype');
+}
+
+html, body{
+  font-family: DomaineDisplay;
+}
+
 
 
