Renvoie des probs dans json

--- a/templates/quizz/quizz.html.twig
+++ b/templates/quizz/quizz.html.twig
@@ -271,14 +271,14 @@
                         </p>
                     </div>
                     <div class=" row text-center justify-content-center text-white check-radio">
-                        <a href="#Question8" data-choice="{{ choices.6.choice1}}" data-path="{{ path('quizz_choice', {id: 1 })}}"
+                        <a href="#Question8" data-choice="K2000" data-path="{{ path('quizz_choice', {id: 1 })}}"
                            class="answers col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response">
                             <img src="{{ choices.6.choice1 }}" class="img-fluid">
                             <div class="w-100 h-100 form-check-input ">
                             </div>
                         </a>
 
-                        <a href="#Question8" data-choice="{{ choices.6.choice2}}" data-path="{{ path('quizz_choice', {id: 1 })}}"
+                        <a href="#Question8" data-choice="Dolorean" data-path="{{ path('quizz_choice', {id: 1 })}}"
                            class="answers col-md-5  w-50  mr-2 mb-2 pt-2 shadow checkbox-radio response">
                             <img src="{{ choices.6.choice2 }}" class="img-fluid">
                             <div class="w-100 h-100 form-check-input ">
