add introduction text

--- a/templates/quizz/information.html.twig
+++ b/templates/quizz/information.html.twig
@@ -9,10 +9,7 @@
                 <div class="mt-5 d-flex flex-column justify-content-center align-items-center">
                     <img class="robot-information" src="{{ asset('build/images/robot-pak-1.png') }}">
                     <h1 class="text-white">Introduction</h1>
-                    <p class="text-box text-center text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Alias aut consequatur
-                        deleniti impedit ipsa iure mollitia natus quibusdam. Accusamus animi commodi ea eius facere magnam
-                            minus mollitia quos voluptas voluptatibus.</p>
+                    <p class="text-box text-center text-white">Welcome on board with Fiverr ! To begin with, answer a few questions to match others freelancers around the world with the same affinities. Cherry on the cake, meet the mentor who'll guide you in your first steps with us :)</p>
                     <a class="button-presentation p-3 text-center text-white mt-3" href="{{ path('quizz') }}">Start
                         <i class="fas fa-arrow-right ml-3"></i>
                     </a>
